fix兼容移动端

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title></title>
   <style>
     *{padding:0;margin:0;list-style:none}
-    html,body{height:100%;width:100%}
-    body{background:url("img/b2_bg.jpg") no-repeat;background-position:center top;position:relative}
+    html,body{height:5000px;width:1240px;margin: 0 auto;}
+    body{background:url("img/b2_bg.jpg") repeat;background-position:center top;position:relative; }
     .boxRot{height:350px;width:900px;border:1px solid #000;background:url("img/b1_bg.jpg") no-repeat;margin:0 auto;cursor:pointer;position:relative;top:10px;box-shadow:0 0 10px 2px}
     .boxRot ul{height:200px;width:200px;position:absolute;top:50%;margin-left:10px;transform:translateY(-50%);transform-style:preserve-3d;transform-origin:50% 50%}
     @keyframes zhuan{0%{transform:translateY(-50%) rotateX(0deg) rotateY(0deg)}
