--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
 
 <body>
 
-<!--   <audio src="audio/liudehua.mp3"></audio><div class="bd"><div class="left"></div><div class="right"></div></div><div class="boxRot"><ul><li><img src="img/1.jpg"height="100%"width="100%"></li><li><img src="img/2.jpg"height="100%"width="100%"></li><li><img src="img/5.jpg"height="100%"width="100%"></li><li><img src="img/4.jpg"height="100%"width="100%"></li><li><img src="img/3.jpg"height="100%"width="100%"></li><li><img src="img/6.jpg"height="100%"width="100%"></li></ul><ul><li><img src="img/caishen6.jpg"height="100%"width="100%"></li><li><img src="img/caishen5.jpg"height="100%"width="100%"></li><li><img src="img/caishen4.jpg"height="100%"width="100%"></li><li><img src="img/caishen3.jpeg"height="100%"width="100%"></li><li><img src="img/caishen2.jpg"height="100%"width="100%"></li><li><img src="img/caishen1.jpeg"height="100%"width="100%"></li></ul><ul><li><img src="img/11 (1).jpg"height="100%"width="100%"></li><li><img src="img/11 (2).jpg"height="100%"width="100%"></li><li><img src="img/11 (3).jpg"height="100%"width="100%"></li><li><img src="img/11 (4).jpg"height="100%"width="100%"></li><li><img src="img/11 (5).jpg"height="100%"width="100%"></li><li><img src="img/11 (6).jpg"height="100%"width="100%"></li></ul><ul><li><img src="img/gong6.jpg"height="100%"width="100%"></li><li><img src="img/gong5.jpg"height="100%"width="100%"></li><li><img src="img/gong4.jpg"height="100%"width="100%"></li><li><img src="img/gong3.jpg"height="100%"width="100%"></li><li><img src="img/gong2.jpg"height="100%"width="100%"></li><li><img src="img/gong1.jpg"height="100%"width="100%"></li></ul></div><div class="boxTex"><span>恭</span><span>喜</span><span>发</span><span>财</span><span>中</span><span>大</span><span>奖</span><span>哈</span></div><div class="box"><ul><li></li><li></li><li></li><li></li><li></li><li></li></ul><span></span><button>开始</button><button>停止</button></div> -->
+ <audio src="audio/liudehua.mp3"></audio><div class="bd"><div class="left"></div><div class="right"></div></div><div class="boxRot"><ul><li><img src="img/1.jpg"height="100%"width="100%"></li><li><img src="img/2.jpg"height="100%"width="100%"></li><li><img src="img/5.jpg"height="100%"width="100%"></li><li><img src="img/4.jpg"height="100%"width="100%"></li><li><img src="img/3.jpg"height="100%"width="100%"></li><li><img src="img/6.jpg"height="100%"width="100%"></li></ul><ul><li><img src="img/caishen6.jpg"height="100%"width="100%"></li><li><img src="img/caishen5.jpg"height="100%"width="100%"></li><li><img src="img/caishen4.jpg"height="100%"width="100%"></li><li><img src="img/caishen3.jpeg"height="100%"width="100%"></li><li><img src="img/caishen2.jpg"height="100%"width="100%"></li><li><img src="img/caishen1.jpeg"height="100%"width="100%"></li></ul><ul><li><img src="img/11 (1).jpg"height="100%"width="100%"></li><li><img src="img/11 (2).jpg"height="100%"width="100%"></li><li><img src="img/11 (3).jpg"height="100%"width="100%"></li><li><img src="img/11 (4).jpg"height="100%"width="100%"></li><li><img src="img/11 (5).jpg"height="100%"width="100%"></li><li><img src="img/11 (6).jpg"height="100%"width="100%"></li></ul><ul><li><img src="img/gong6.jpg"height="100%"width="100%"></li><li><img src="img/gong5.jpg"height="100%"width="100%"></li><li><img src="img/gong4.jpg"height="100%"width="100%"></li><li><img src="img/gong3.jpg"height="100%"width="100%"></li><li><img src="img/gong2.jpg"height="100%"width="100%"></li><li><img src="img/gong1.jpg"height="100%"width="100%"></li></ul></div><div class="boxTex"><span>恭</span><span>喜</span><span>发</span><span>财</span><span>中</span><span>大</span><span>奖</span><span>哈</span></div><div class="box"><ul><li></li><li></li><li></li><li></li><li></li><li></li></ul><span></span><button>开始</button><button>停止</button></div>
 
   <script>
-//      var btnArr=document.getElementsByTagName("button");var _box=document.querySelector(".box");var liArr=_box.querySelectorAll("li");var span=_box.querySelector("span");var _boxRot=document.querySelector(".boxRot");var _ulRot=_boxRot.querySelectorAll("ul");var _audio=document.querySelector("audio");var _left=document.querySelector(".left");var _right=document.querySelector(".right");var timer=null;var timer1=null;var num=[],n;var sum=0;btnArr[0].onclick=function(){clearInterval(timer);_left.style.transform='translateY(563px)'
-// _left.style.animation='xia 15s linear infinite alternate 2s'
-// _right.style.transform='translateY(563px)'
-// _right.style.animation='xia 15s linear infinite alternate 2s'
-// _audio.play();for(var i=0;i<_ulRot.length;i++){_ulRot[i].style.animation='zhuan 5s linear infinite';}
-// timer=setInterval(function(){span.innerHTML=parseInt(Math.random()*16+1);var num=[];for(var i=0;;i++){var bool=true
-// var n=parseInt(Math.random()*33+1);for(var j=0;j<num.length;j++){if(n==num[j]){bool=false}}
-// if(bool){num.push(n)}
-// if(num.length==6){break}}
-// for(var s=0;s<liArr.length;s++){liArr[s].innerHTML=num[s];}},100)}
-// btnArr[1].onclick=function(){clearInterval(timer);}
+     var btnArr=document.getElementsByTagName("button");var _box=document.querySelector(".box");var liArr=_box.querySelectorAll("li");var span=_box.querySelector("span");var _boxRot=document.querySelector(".boxRot");var _ulRot=_boxRot.querySelectorAll("ul");var _audio=document.querySelector("audio");var _left=document.querySelector(".left");var _right=document.querySelector(".right");var timer=null;var timer1=null;var num=[],n;var sum=0;btnArr[0].onclick=function(){clearInterval(timer);_left.style.transform='translateY(563px)'
+_left.style.animation='xia 15s linear infinite alternate 2s'
+_right.style.transform='translateY(563px)'
+_right.style.animation='xia 15s linear infinite alternate 2s'
+_audio.play();for(var i=0;i<_ulRot.length;i++){_ulRot[i].style.animation='zhuan 5s linear infinite';}
+timer=setInterval(function(){span.innerHTML=parseInt(Math.random()*16+1);var num=[];for(var i=0;;i++){var bool=true
+var n=parseInt(Math.random()*33+1);for(var j=0;j<num.length;j++){if(n==num[j]){bool=false}}
+if(bool){num.push(n)}
+if(num.length==6){break}}
+for(var s=0;s<liArr.length;s++){liArr[s].innerHTML=num[s];}},100)}
+btnArr[1].onclick=function(){clearInterval(timer);}
   </script>
 
 </body>
